crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__assign_to_global_variable_in_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/assign_to_global_variable_in_function.lox
---
success: true
exit_code: 0
----- stdout -----
27
nil
42

----- stderr -----
