crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__conditional_return_at_end_of_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--loop=threaded"
    - crabbing-interpreters/tests/cases/conditional_return_at_end_of_function.lox
---
success: true
exit_code: 0
----- stdout -----
42
nil
42
<C instance at [POINTER]>

----- stderr -----
