crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__deduplicated_constants.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/deduplicated_constants.lox
---
success: true
exit_code: 0
----- stdout -----
a
b
a

----- stderr -----
