crabbing-interpreters/tests/testsuite/snapshots/testsuite__crabbing-interpreters__tests__cases__for_loop_opens_new_scope_for_initialiser.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/for_loop_opens_new_scope_for_initialiser.lox
---
success: true
exit_code: 0
----- stdout -----
0
1
42

----- stderr -----
